# loom99-claude-marketplace

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMING_SOON.md  DEVELOPMENT.md  Justfile 2  NEXT_STEPS.md  PROJECT_SPEC.md  README.md  TEST_SUMMARY.md  VERBOSITY_REDUCTION_COMPLETE.md  justfile  pyproject.toml  run_tests.sh  test_deliverable_summary.json
.agent_planning/: BACKLOG-2025-10-28-073338.md  FEATURE_PROPOSAL_promptctl_flagship_logging.md  FEATURE_PROPOSAL_two_new_workflow_plugins.md  PLAN-final-100-percent-2025-11-07-012334.md  PLAN-path-a-revised-2025-11-07-014830.md  PLAN-test-harness-2025-11-07-023500.md  PLAN-testing-framework-next-steps-2025-11-06-032004.md  PLAN-verbosity-reduction-2025-10-29-075000.md  PLANNING-SUMMARY-final-100-percent-2025-11-07-012334.md  PLANNING-SUMMARY-path-a-revised-2025-11-07-014830.md  PLANNING-SUMMARY-testing-framework-2025-11-06-021441.md  PLANNING-SUMMARY-testing-framework-next-steps-2025-11-06-032004.md  PLANNING-SUMMARY-verbosity-2025-10-29-075000.md  SPRINT-03-2025-10-28-073338.md  SPRINT-03-KICKOFF.md  STATUS-2025-10-28-063210.md  STATUS-2025-10-28-065832.md  STATUS-2025-10-28-072913.md  STATUS-2025-10-29-050659.md  STATUS-2025-11-07-030116.md  STATUS-2025-11-07-034046.md  STATUS-final-100-percent-2025-11-07-011859.md  STATUS-path-a-readiness-2025-11-07-014332.md  STATUS-test-harness-feasibility-2025-11-07-022042.md  TODO-verbosity-phase1.md
.agent_planning/archive/: BACKLOG-2025-10-28-062900.md  BACKLOG-2025-10-28-063531.md  BACKLOG-2025-10-28-070303.md  INITIATIVES-2025-10-28-062900.md  PLAN-100-percent-2025-11-06-234955.md.archived  PLAN-testing-framework-2025-11-06-021441.md.archived  PLANNING-SUMMARY-100-percent-2025-11-06-234955.md.archived  PLANNING-SUMMARY-2025-10-28-062900.md  PLANNING-UPDATE-2025-10-28-070303.md  SPRINT-01-2025-10-28-062900.md  SPRINT-02-2025-10-28-063531.md  SPRINT-02-2025-10-28-070303.md  STATUS-2025-11-06-020800.md.archived
.claude/: settings.local.json
.claude-plugin/: marketplace.json
plugins/agent-loop/: README.md
plugins/dev-loop/: .mcp.json  CLAUDE.md
plugins/epti/: README.md
plugins/promptctl/: .mcp.json  README.md  highdeas.md  justfile  pyproject.toml
plugins/promptctl/.claude-plugin/: plugin.json
plugins/promptctl/hooks/: hooks.json
plugins/promptctl/mcp/: logflow.py  server.py
plugins/promptctl/read-only-docs/promptctl/: cli.py  error_handler.py  prompt_engine.py
plugins/promptctl/read-only-docs/promptctl/hooks/: actions.py  context.py  handler.py
plugins/promptctl/read-only-docs/promptctl/schemas/: prompt_config.schema.cue
plugins/promptctl/tests/: test_logging 2.py  test_logging.py
plugins/visual-iteration/: .mcp.json  README.md
tests/: README.md  __init__.py
tests/e2e/mcp_server/: harness_server.py  pyproject.toml
tests/functional/: DELIVERABLE_SUMMARY.json  PHASE2_QUICKSTART.md  PHASE2_TEST_SUMMARY.md  PHASE3-TESTS-README.md  README.md  README_PHASE2_TESTS.md  REFACTORING_SUMMARY.md  TEST_PHASE1_HARNESS_README.md  __init__.py  phase1_test_summary.json  test_100_percent_completion.py  test_e2e_harness_design.py  test_enhanced_structural_validation.py  test_manual_testing_framework.py  test_phase1_test_harness.py  test_phase2_reductions.py  test_phase3_agents.py  test_skills_structure.py
tests/manual/: ISSUE_TEMPLATE.md  README.md  TESTING_RESULTS.md  TROUBLESHOOTING.md  agent-agent-loop.md  agent-epti.md  agent-visual-iteration.md  commands-agent-loop.md  commands-epti.md  commands-visual-iteration.md  installation-agent-loop.md  installation-epti.md  installation-marketplace.md  (+4 more)
tools/: generate_test_project.py
(+63 files in other folders)
