[project]
name = "loom99-claude-marketplace-tests"
version = "0.1.0"
description = "Testing infrastructure for loom99 Claude Code Plugin Marketplace"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.4.0",
    "PyYAML>=6.0.1",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Verbose output showing test names and results
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

# Markers for different test categories
markers = [
    # Original markers
    "structure: Tests for directory and file structure",
    "frontmatter: Tests for YAML frontmatter validation",
    "config: Tests for plugin configuration",
    "content: Tests for content preservation",

    # Functional test markers (Phase 1-3 from PLAN-testing-framework)
    "manual_framework: Phase 1 - Manual testing framework validation (P0-1 to P0-5)",
    "enhanced_structural: Phase 2 - Enhanced structural validation (P1-1 to P1-7)",
    "e2e_design: Phase 3 - E2E harness design validation (P2-1 to P2-4)",

    # Test workflow markers
    "phase1: Phase 1 work items - manual testing preparation",
    "phase2: Phase 2 work items - enhanced structural tests",
    "phase3: Phase 3 work items - E2E harness design",

    # Status markers
    "blocks_p0_6: Tests that must pass before manual testing execution (P0-6)",
    "blocks_production: Tests that must pass before claiming production ready",

    # Performance markers
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
