[project]
name = "claude-code-test-harness"
version = "0.1.0"
description = "FastMCP-based test harness for Claude Code E2E testing"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Claude Code Test Harness Team"}
]
license = {text = "MIT"}

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
